Greg - User stories 4-8

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
     <header id="header">
       <img id="header-img" src="comp_logo.png" alt="logo">
       <nav id="nav-bar">
-        <a class="nav-link">About Us
-
-        </a>
-
-        <a class="nav-link">Services
-
-        </a>
-
-        <a class="nav-link">Contact us
-
-        </a>
-
+        <a href="#description" class="nav-link">About Us
+        </a><br>
+        <a href="#product-page" class="nav-link">Services
+        </a><br>
+        <a href="#pricing" class="nav-link">Contact us
+        </a><br>
       </nav>
+      <sections id="description">Here goes the description</section><br>
+        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/zlZnmJf6KhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+      <sections id="product-page">Here goes the product page</section><br>
+      <sections id="pricing">Here goes the pricing</section><br>
+      <section id="contactus">
+        Here goes the form
+        <form id="form">
+          <input type="email" id="email" placeholder="E-mail" required></input>
+        </form>
+      </section>
 
     </header>
-
-
-
-
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <script  src="js/index.js"></script>
