--- a/index.html
+++ b/index.html
@@ -23,8 +23,9 @@
       <sections id="pricing">Here goes the pricing</section><br>
       <section id="contactus">
         Here goes the form
-        <form id="form">
-          <input type="email" id="email" placeholder="E-mail" required></input>
+        <form id="form" action="https://www.freecodecamp.com/email-submit">
+          <input type="email" name="email" id="email" placeholder="E-mail" required></input>
+          <input type="submit" id="submit" value="Submit">
         </form>
       </section>
 
