--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <title>Landing Page</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:wght@200&display=swap" rel="stylesheet">
   </head>
 
   <body>
     <header id="header">
-      <img id="header-img" src="comp_logo.png" alt="logo">
+      <img id="header-img" src="comp_logo2.png" alt="logo">
+      
       <nav id="nav-bar">
         <a href="#description" class="nav-link">About Us
         </a><br>
@@ -17,19 +19,22 @@
         <a href="#pricing" class="nav-link">Contact us
         </a><br>
       </nav>
-      <sections id="description">Here goes the description</section><br>
-        <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/zlZnmJf6KhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
-      <sections id="product-page">Here goes the product page</section><br>
-      <sections id="pricing">Here goes the pricing</section><br>
-      <section id="contactus">
-        Here goes the form
-        <form id="form" action="https://www.freecodecamp.com/email-submit">
-          <input type="email" name="email" id="email" placeholder="E-mail" required></input>
-          <input type="submit" id="submit" value="Submit">
-        </form>
-      </section>
+      
 
     </header>
+
+    <sections id="description">How we fix computers</section><br>
+      <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/zlZnmJf6KhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
+
+    <sections id="product-page">Here goes the product page</section><br>
+    <sections id="pricing">Here goes the pricing</section><br>
+    <section id="contactus">
+      Here goes the form
+      <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <input type="email" name="email" id="email" placeholder="E-mail" required></input>
+        <input type="submit" id="submit" value="Submit">
+      </form>
+    </section>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 
     <script  src="js/index.js"></script>
