--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <header id="header">
       <img id="header-img" src="comp_logo2.png" alt="logo">
-      
+
       <nav id="nav-bar">
         <a href="#description" class="nav-link">About Us
         </a><br>
@@ -19,19 +19,24 @@
         <a href="#pricing" class="nav-link">Contact us
         </a><br>
       </nav>
-      
+
 
     </header>
 
-    <sections id="description">How we fix computers</section><br>
+    <sections id="description">Video Introduction</section><br>
       <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/zlZnmJf6KhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
-    <sections id="product-page">Here goes the product page</section><br>
+    <sections id="product-page">
+      <text id="product-title" font-size:large>Product</text>
+    </section><br>
     <sections id="pricing">Here goes the pricing</section><br>
     <section id="contactus">
-      Here goes the form
       <form id="form" action="https://www.freecodecamp.com/email-submit">
+        <text id="forumtitle">Contact Us</text>
+        <input type="text" name="name" id="name" placeholder="Name" required></input>
+        <input type="number" name="phonenumber" id="number" placeholder="Phone Number" required></input>
         <input type="email" name="email" id="email" placeholder="E-mail" required></input>
+        <textarea id="comments" name="comments" placeholder="Comments"></textarea>
         <input type="submit" id="submit" value="Submit">
       </form>
     </section>
