--- a/index.html
+++ b/index.html
@@ -29,7 +29,55 @@
     <sections id="product-page">
       <text id="product-title" font-size:large>Product</text>
     </section><br>
-    <sections id="pricing">Here goes the pricing</section><br>
+
+    <section id="pricing">
+      <ul class="service-list">
+        <li class="service-title">
+          General maintenance
+        </li>
+        <li>
+          Price $40
+        </li>
+        <li>
+          Clean
+        </li>
+        <li>
+          Check physical connections
+        </li>
+      </ul>
+
+      <ul class="service-list">
+        <li class="service-title">
+          General maintenance
+        </li>
+        <li>
+          Price $40
+        </li>
+        <li>
+          Clean
+        </li>
+        <li>
+          Check physical connections
+        </li>
+      </ul>
+
+      <ul class="service-list">
+        <li class="service-title">
+          General maintenance
+        </li>
+        <li>
+          Price $40
+        </li>
+        <li>
+          Clean
+        </li>
+        <li>
+          Check physical connections
+        </li>
+      </ul>
+    
+    </section>
+
     <section id="contactus">
       <form id="form" action="https://www.freecodecamp.com/email-submit">
         <text id="forumtitle">Contact Us</text>
