--- a/index.html
+++ b/index.html
@@ -23,23 +23,36 @@
 
     </header>
 
-    <sections id="description">Video Introduction</section><br>
+    <sections id="description"></section><br>
+      <text id="video-title" font-size:large>Video Introduction</text>
       <iframe id="video" width="560" height="315" src="https://www.youtube.com/embed/zlZnmJf6KhM" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe><br>
 
     <sections id="product-page">
-      <text id="product-title" font-size:large>Product</text>
+      <text id="product-title" font-size:large>Description</text>
+      <p id="product-details">Nothing is more frustrating than something not working when you need it most. Doesn't it seem like your computer always needs repair at the worst times? Perhaps your final paper is due for a class or you simply can't do the work you need to - whatever the case, getting your PC repaired is essential.  Many technicians in the computer industry charge a flat rate (or several hours of time) to perform a "tune up" on your PC and will tell you that they've repaired it.</p><br>
+      <p>This is seldom the best way to approach your problem and will not prevent the problem from coming again. The reality is that spyware removal, disk drive defragmentation, virus removal and definition updates, etc. are only temporary solutions if not coupled with completely securing your computer.</p>
     </section><br>
 
     <section id="pricing">
+      <text id="pricing-title" font-size:large>Pricing</text>
       <ul class="service-list">
         <li class="service-title">
-          General maintenance
+          Special Care
         </li>
         <li>
-          Price $40
+          "Full once-over"
         </li>
         <li>
-          Clean
+          Price $90
+        </li>
+        <li>
+          Change battery
+        </li>
+        <li>
+          Color calibration
+        </li>
+        <li>
+          Update software
         </li>
         <li>
           Check physical connections
@@ -59,23 +72,24 @@
         <li>
           Check physical connections
         </li>
+        <li>
+          Overall status
+        </li>
       </ul>
 
       <ul class="service-list">
         <li class="service-title">
-          General maintenance
+          The cheapo
         </li>
         <li>
-          Price $40
+          Price $20
         </li>
         <li>
           Clean
         </li>
-        <li>
-          Check physical connections
-        </li>
+
       </ul>
-    
+
     </section>
 
     <section id="contactus">
